suppress pkg msgs

--- a/figures/09_stream_buffer.Rmd
+++ b/figures/09_stream_buffer.Rmd
@@ -47,9 +47,9 @@ ggplot(data = dt) +
 #   geom_sf(data = res_pnt)
 
 library(curl)
-library(glue)
+suppressMessages(library(glue))
 library(slippymath)
-library(rgdal)
+suppressMessages(library(rgdal))
 
 res_iws  <- query_gis("IWS", "lagoslakeid", llids)
 
