--- a/tables/01_predictors.Rmd
+++ b/tables/01_predictors.Rmd
@@ -12,7 +12,7 @@ knitr::opts_chunk$set(echo = FALSE, warning = FALSE, message = FALSE, fig.path =
 
 ```{r summary_table, eval=TRUE}
 library(kableExtra)
-library(dplyr)
+suppressMessages(library(dplyr))
 library(magrittr)
 
 cdl_vars <- readRDS("../data/dt.rds") %>%
