--- a/figures/07_model-selection.Rmd
+++ b/figures/07_model-selection.Rmd
@@ -36,15 +36,15 @@ hu4 <- dplyr::left_join(hu4,
                                  hu4_zoneid, .keep_all = TRUE), 
                         by = c("ZoneID" = "hu4_zoneid"))
 
-re_brms <- readRDS("../data/mcmc/re_brms.rds")
+re_brms        <- readRDS("../data/mcmc/re_brms.rds")
 # lapply(re_brms, function(x) x$formula) 
-fit_tn <- re_brms[[5]] # 5 is best tn model with re effects
+fit_tn         <- re_brms[[5]] # 5 is best tn model with re effects
 signif_hu4_ids <- fit_tn$re_signif_ids 
-signif_hu4 <- dplyr::filter(hu4, ZoneID %in% signif_hu4_ids)
+signif_hu4     <- dplyr::filter(hu4, ZoneID %in% signif_hu4_ids)
 
 # plotting
-gg_hu4_n <- ggplot() +
-    geom_sf(data = hu4, aes(fill = n_cat)) +
+gg_hu4 <- ggplot() +
+    geom_sf(data = hu4) +
     geom_sf(data = signif_hu4, color = "red", alpha = 0) +
     # geom_text(data = coords, aes(x = x, y = y, label = ZoneID)) +   
     theme_minimal() + 
@@ -52,17 +52,26 @@ gg_hu4_n <- ggplot() +
           axis.title = element_blank(), 
           legend.title = element_blank()) + 
     scale_fill_manual(values = colors, levels(hu4$n_cat)) + 
-    guides(guide_legend(nrow = 2)) + 
-  ggtitle("# of lakes")
+    guides(guide_legend(nrow = 2))
 
-gg_hu4_ndep <- ggplot() +
-    geom_sf(data = hu4, aes(fill = hu4_nitrogen_atmospheric_deposition)) +
-    geom_sf(data = signif_hu4, color = "red", alpha = 0) +
-    theme_minimal() + 
-    theme(legend.position = "bottom", 
-          axis.title = element_blank(), 
-          legend.title = element_blank()) +
-  ggtitle("N Deposition")
+gg_corn_re <- ggplot(data = fit_tn$re) +
+  geom_pointrange(aes(x = hu4vzoneid, y = `50%`, 
+                      ymin = `5%`, ymax = `95%`, color = signif)) +
+  scale_color_manual(values = c("FALSE" = "black", "TRUE" = "red")) +
+  geom_hline(yintercept = 0) +
+  coord_flip() +
+  ylab("TN model, corn RE slope") + theme(legend.position = 0)
+
+plot_grid(gg_corn_re, gg_hu4)
+
+# gg_hu4_ndep <- ggplot() +
+#     geom_sf(data = hu4, aes(fill = hu4_nitrogen_atmospheric_deposition)) +
+#     geom_sf(data = signif_hu4, color = "red", alpha = 0) +
+#     theme_minimal() + 
+#     theme(legend.position = "bottom", 
+#           axis.title = element_blank(), 
+#           legend.title = element_blank()) +
+#   ggtitle("N Deposition")
 
 # gg_hu4_clay <- ggplot() +
 #     geom_sf(data = hu4, aes(fill = hu4_clay_pct)) +
@@ -82,10 +91,10 @@ gg_hu4_ndep <- ggplot() +
 # dt <- dplyr::filter(dt, tp < 500 & chla < 150)
 
 # create alpha sample size weightings
-dt <- left_join(dt, ungroup(count(group_by(dt, hu4_zoneid))), 
-                by = "hu4_zoneid") %>%
-  dplyr::filter(n >= 3) %>%
-  mutate(n = n / max(n, na.rm = TRUE))
+# dt <- left_join(dt, ungroup(count(group_by(dt, hu4_zoneid))), 
+#                 by = "hu4_zoneid") %>%
+#   dplyr::filter(n >= 3) %>%
+#   mutate(n = n / max(n, na.rm = TRUE))
   
 # join iws ag
 # dt <- left_join(dt, ungroup(dplyr::select(mutate(
@@ -96,34 +105,34 @@ dt <- left_join(dt, ungroup(count(group_by(dt, hu4_zoneid))),
 #   )
 
 # create hu4 labels
-centroid_xy <- sf::st_as_text(sf::st_geometry(sf::st_centroid(hu4[,"ZoneID"])))
-extract_coords <- function(messy_centroid){
-  res <- stringr::str_split(messy_centroid, "\\(", simplify = TRUE)[2]
-  res <- stringr::str_split(res, "\\)", simplify = TRUE)[1]
-  stringr::str_split(res, " ", simplify = TRUE)
-}
-coords <- data.frame(matrix(
-            as.numeric(unlist(lapply(centroid_xy, extract_coords))),
-            ncol = 2, byrow = TRUE), stringsAsFactors = FALSE)
-names(coords) <- c("x", "y")
-coords$ZoneID <- gsub("HU4_", "", hu4[,"ZoneID"]$ZoneID)
-
-gg_smooth <- ggplot(data = dt, 
-                    aes(x = ag_pct, y = tp, color = hu4_zoneid, alpha = n)) + 
-    geom_line(stat = "smooth", method = lm, se = FALSE, aes(alpha = n))  +
-    geom_smooth(aes(group = 1), method = lm, se = FALSE, 
-                color = "black", linetype = "dashed") +
-    # geom_abline(slope = 1.55, intercept = -19.86, color = "red") +
-    # scale_y_log10() + scale_x_log10() +
-    theme(legend.position = "") +
-    labs(x = "Ag. LULC (pct, NLCD 2011)", 
-         y = "TP")  +
-    scale_y_continuous(breaks = seq(0, 250, by = 50), limits = c(0, 300))
-    
-plot_grid(gg_hu4_n, gg_hu4_ndep)
+# centroid_xy <- sf::st_as_text(sf::st_geometry(sf::st_centroid(hu4[,"ZoneID"])))
+# extract_coords <- function(messy_centroid){
+#   res <- stringr::str_split(messy_centroid, "\\(", simplify = TRUE)[2]
+#   res <- stringr::str_split(res, "\\)", simplify = TRUE)[1]
+#   stringr::str_split(res, " ", simplify = TRUE)
+# }
+# coords <- data.frame(matrix(
+#             as.numeric(unlist(lapply(centroid_xy, extract_coords))),
+#             ncol = 2, byrow = TRUE), stringsAsFactors = FALSE)
+# names(coords) <- c("x", "y")
+# coords$ZoneID <- gsub("HU4_", "", hu4[,"ZoneID"]$ZoneID)
+# 
+# gg_smooth <- ggplot(data = dt, 
+#                     aes(x = ag_pct, y = tp, color = hu4_zoneid, alpha = n)) + 
+#     geom_line(stat = "smooth", method = lm, se = FALSE, aes(alpha = n))  +
+#     geom_smooth(aes(group = 1), method = lm, se = FALSE, 
+#                 color = "black", linetype = "dashed") +
+#     # geom_abline(slope = 1.55, intercept = -19.86, color = "red") +
+#     # scale_y_log10() + scale_x_log10() +
+#     theme(legend.position = "") +
+#     labs(x = "Ag. LULC (pct, NLCD 2011)", 
+#          y = "TP")  +
+#     scale_y_continuous(breaks = seq(0, 250, by = 50), limits = c(0, 300))
+#     
+# plot_grid(gg_hu4_n, gg_hu4_ndep)
 ``` 
 
-```{r signif_hu4_lakes}
+```{r signif_hu4_lakes, echo=FALSE}
 # compare lakes in signif hu4s
 dt        <- readRDS("../data/dt_scaled.rds") %>%
   mutate(signif_hu4 = hu4_zoneid %in% signif_hu4_ids) %>%
@@ -133,56 +142,46 @@ dt        <- readRDS("../data/dt_scaled.rds") %>%
   mutate(median = median(value, na.rm = TRUE))
 
 dt_predictors <- dplyr::filter(dt, key %in% 
-                                 c("wetland_potential", "tp",
+                                 c("tp",
                                    "nitrogen_atmospheric_deposition",
-                                   "hu12_baseflow_mean", "clay_pct"))
+                                   "clay_pct"))
 dt_modelled <- dplyr::filter(dt, key %in% 
                                c("maxdepth", "tn", "soil_org_carbon",
                                  "buffer_cultivated_crops", "corn",
                                  "nitrogen_fertilizer_use"))
 
-ggplot(data = dt_predictors) + 
+gg_hist <- ggplot(data = dt_predictors) + 
   geom_histogram(aes(x = value, fill = signif_hu4), alpha = 0.7) +
   geom_vline(aes(xintercept = median, color = signif_hu4), 
              linetype = "dashed") +
+  scale_fill_manual(values = c("FALSE" = "black", "TRUE" = "red")) +
+  scale_color_manual(values = c("FALSE" = "black", "TRUE" = "red")) +
+  theme(legend.position = 0) +
   facet_wrap(~key)
 
-ggplot(data = dt_modelled) + 
-  geom_histogram(aes(x = value, fill = signif_hu4), alpha = 0.7) +
-  geom_vline(aes(xintercept = median, color = signif_hu4), 
-             linetype = "dashed") +
-  facet_wrap(~key)
-
-fit_tn$formula
-
+# ggplot(data = dt_modelled) + 
+#   geom_histogram(aes(x = value, fill = signif_hu4), alpha = 0.7) +
+#   geom_vline(aes(xintercept = median, color = signif_hu4), 
+#              linetype = "dashed") +
+#   facet_wrap(~key)
 
 dt        <- readRDS("../data/dt_scaled.rds") %>%
   mutate(signif_hu4 = hu4_zoneid %in% signif_hu4_ids) %>%
   tidyr::gather(key = "key", value = "value", 
                       -lagoslakeid, -hu4_zoneid, -hu12_zoneid, -signif_hu4, -tn) %>%
-  dplyr::filter(key %in% c("maxdepth", "tn", "soil_org_carbon",
-                                 "buffer_cultivated_crops", "corn",
-                                 "nitrogen_fertilizer_use"))
+  dplyr::filter(key %in% c(c("tp"))) %>%
+  tidyr::spread(key, value)
 
-ggplot(data = dt) + 
-  geom_point(aes(x = tn, y = value, color = signif_hu4)) +
+gg_tp <- ggplot(data = dt) + 
+  geom_point(aes(x = tn, y = tp, color = signif_hu4)) +
   geom_line(stat = "smooth", method = lm, se = FALSE, 
-            aes(x = tn, y = value, color = signif_hu4)) +
-  facet_wrap(~key)
+            aes(x = tn, y = tp, color = signif_hu4)) +
+  scale_fill_manual(values = c("FALSE" = "black", "TRUE" = "red")) +
+  scale_color_manual(values = c("FALSE" = "black", "TRUE" = "red")) +
+  # facet_wrap(~key) +
+  theme(legend.position = 0)
 
-dt        <- readRDS("../data/dt_scaled.rds") %>%
-  mutate(signif_hu4 = hu4_zoneid %in% signif_hu4_ids) %>%
-  tidyr::gather(key = "key", value = "value", 
-                      -lagoslakeid, -hu4_zoneid, -hu12_zoneid, -signif_hu4, -tn) %>%
-  dplyr::filter(key %in% c("wetland_potential", "tp",
-                                   "nitrogen_atmospheric_deposition",
-                                   "hu12_baseflow_mean", "clay_pct"))
-
-ggplot(data = dt) + 
-  geom_point(aes(x = tn, y = value, color = signif_hu4)) +
-  geom_line(stat = "smooth", method = lm, se = FALSE, 
-            aes(x = tn, y = value, color = signif_hu4)) +
-  facet_wrap(~key)
+plot_grid(gg_hist, gg_tp, nrow = 2)
 
 ```
 
