--- a/manuscript/figures.Rmd
+++ b/manuscript/figures.Rmd
@@ -34,11 +34,11 @@ knitr::include_graphics("../figures/09_stream_buffer-1.pdf")
 knitr::include_graphics("../figures/satellite-1.pdf")
 ```
 
-```{r exploratory_dotplot, fig.cap = "Exploratory dotplots showing absolute value correlations.", warning=FALSE, echo = FALSE}
+```{r exploratory_dotplot, fig.cap = "Exploratory dotplots showing absolute value correlation coefficients.", warning=FALSE, echo = FALSE}
 knitr::include_graphics("../figures/dotplot-1.pdf")
 ```
 
-```{r exploratory_heatmap, fig.cap = "Exploratory heatmap showing absolute value correlations.", warning=FALSE, echo = FALSE}
+```{r exploratory_heatmap, fig.cap = "Heatmap showing absolute value correlation coefficients.", warning=FALSE, echo = FALSE}
 knitr::include_graphics("../figures/08_exploratory_dotplot-1.pdf")
 ```
 
